fix: fix <section> element widths on small screens

--- a/scss/core/_section.scss
+++ b/scss/core/_section.scss
@@ -37,6 +37,6 @@ section {
   }
 
   @media (max-width: 1200px) {
-    padding: 10rem;
+    padding: 10vw;
   }
 }
